--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,20 @@
   <artifactId>bi-analysis</artifactId>
   <version>0.0.1-SNAPSHOT</version>
     <properties>
-        <storm.version>0.9.3</storm.version>
+        <storm.version>[1.1.3,)</storm.version>
         <kafka.version>0.8.1.1</kafka.version>
-        <fastjson.version>1.2.2</fastjson.version>
+        <fastjson.version>[1.2.31,)</fastjson.version>
         <!--<hadoop.version>1.1.2</hadoop.version>-->
         <hadoop.version>2.5.2</hadoop.version>
         <commons-configuration.version>1.9</commons-configuration.version>
         <xstream.version>1.3.1</xstream.version>
-        <junit.version>4.11</junit.version>
+        <junit.version>[4.13.1,)</junit.version>
         <hbase.version>0.98.0-hadoop2</hbase.version>
         <commons-lang.version>2.6</commons-lang.version>
         <hadoop-lzo.version>0.4.20-SNAPSHOT</hadoop-lzo.version>
         <args4j.version>2.0.29</args4j.version>
-        <jackson-databind.version>2.4.2</jackson-databind.version>
-        <zookeeper.version>3.4.6</zookeeper.version>
+        <jackson-databind.version>[2.9.10.7,)</jackson-databind.version>
+        <zookeeper.version>[3.4.14,)</zookeeper.version>
         <drools.version>5.5.0.Final</drools.version>
         <gson.version>2.2.4</gson.version>
     </properties>
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.3.5</version>
+            <version>[4.3.6,)</version>
         </dependency>
 
         <!-- 添加redis包 -->
@@ -134,7 +134,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.29</version>
+            <version>[8.0.16,)</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
